--- a/index.html
+++ b/index.html
@@ -3,33 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Deriv Mini Trading Signal Tool</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { background: #0d0d0d; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    .container { padding: 20px; display: flex; gap: 20px; }
+    body {
+      background: #0d0d0d;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      padding: 20px;
+      display: flex;
+      gap: 20px;
+    }
     .left-panel { flex: 3; }
     .right-panel { flex: 1; }
     h1 { text-align: center; color: #0ff; margin-bottom: 10px; }
-    .controls, .trade-controls { margin-bottom: 20px; }
-    button { padding: 8px 12px; background: #0ff; color: #000; border: none; border-radius: 5px; cursor: pointer; margin-right: 5px; }
+    .controls { margin-bottom: 20px; }
+    button { padding: 8px 12px; border: none; border-radius: 5px; cursor: pointer; }
+    .trade-btn { width: 100%; margin-top: 10px; font-size: 1em; }
+    .trade-btn.rise { background: #0f0; color: #000; }
+    .trade-btn.fall { background: #f00; color: #fff; }
+    .trade-btn.cancel { background: #888; color: #fff; }
+    .account-info p { margin: 5px 0; }
+    .chart-box {
+      background: #1a1a1a;
+      padding: 10px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    canvas { display: block; max-width: 100%; margin: auto; }
     table { width: 100%; border-collapse: collapse; margin-top: 10px; }
     th, td { border: 1px solid #333; padding: 5px; text-align: center; }
     .entry { color: #0f0; }
     .stoploss { color: #f00; }
-    #signalStrength { text-align: right; font-size: 1.2em; color: gold; margin-top: 10px; }
-    .chart-box { background: #1a1a1a; padding: 10px; border-radius: 10px; margin-bottom: 20px; }
-    canvas { display: block; max-width: 100%; margin: auto; }
-    .account-info { margin-bottom: 15px; font-size: 1.1em; }
     .trade-history { margin-top: 20px; }
   </style>
 </head>
 <body>
   <h1>Deriv Mini Trading Signal Tool</h1>
-
   <div class="container">
-    <!-- Left: Signal Charts & History -->
     <div class="left-panel">
       <div class="controls">
         <button id="startBtn">Start</button>
@@ -43,9 +59,7 @@
       <div class="chart-box">
         <canvas id="rsiChart" height="100"></canvas>
       </div>
-
       <div id="signal" style="font-size: 1.4em; margin-top: 10px;"></div>
-
       <div class="history">
         <h3>Signal History</h3>
         <table>
@@ -55,27 +69,24 @@
       </div>
     </div>
 
-    <!-- Right: Controls & Trade History -->
     <div class="right-panel">
       <label>Market:</label>
       <select id="marketSelect"></select>
 
       <div class="account-info">
-        Real Balance: <span id="realBalance">-</span><br/>
-        CR Number: <span id="crNumber">-</span>
+        <p>Balance: <span id="balance">--</span></p>
+        <p>CR: <span id="loginid">--</span></p>
       </div>
 
-      <div class="trade-controls">
-        <button id="riseBtn">Rise</button>
-        <button id="fallBtn">Fall</button>
-        <button id="cancelBtn">Cancel</button>
-      </div>
+      <button id="riseBtn" class="trade-btn rise">Rise</button>
+      <button id="fallBtn" class="trade-btn fall">Fall</button>
+      <button id="cancelBtn" class="trade-btn cancel" disabled>Cancel</button>
 
       <div class="trade-history">
         <h3>Trade History</h3>
         <table>
-          <thead><tr><th>Time</th><th>Market</th><th>Type</th><th>Entry</th><th>SL</th><th>Dur</th><th>Result</th></tr></thead>
-          <tbody id="tradeHistoryBody"></tbody>
+          <thead><tr><th>Time</th><th>Market</th><th>Type</th><th>Amount</th><th>Dur</th><th>Status</th></tr></thead>
+          <tbody id="tradeHistory"></tbody>
         </table>
       </div>
     </div>
@@ -98,9 +109,13 @@
       }
     })();
 
-    const TOKEN = localStorage.getItem('deriv_token');
+    const TOKEN   = localStorage.getItem('deriv_token');
+    const LOGINID = localStorage.getItem('deriv_loginid');
     if (!TOKEN) window.location.href = OAUTH_URL;
 
+    document.getElementById('loginid').innerText = LOGINID || '--';
+
+    // ──────────────── WS & DATA HANDLING ────────────────
     const WS_URL = `wss://ws.binaryws.com/websockets/v3?app_id=${APP_ID}`;
     const markets = ['R_10', 'R_25', 'R_50', 'R_75', 'R_100', 'R_10_1s', 'R_25_1s', 'R_50_1s', 'R_75_1s', 'R_100_1s'];
     const marketSelect = document.getElementById('marketSelect');
@@ -108,24 +123,23 @@
 
     let ws, priceChart, rsiChart;
     let priceData = [], rsiData = [], timeLabels = [], entryMarkers = [];
+    let currentProposalId;
 
     function initCharts() {
       const priceCtx = document.getElementById('priceChart').getContext('2d');
-      const rsiCtx = document.getElementById('rsiChart').getContext('2d');
+      const rsiCtx   = document.getElementById('rsiChart').getContext('2d');
 
       priceChart = new Chart(priceCtx, {
         type: 'line', data: { labels: [], datasets: [
-            { label: 'Price', data: [], borderColor: '#0ff', borderWidth: 2, pointRadius: 0 },
-            { label: 'Entries', data: [], type: 'scatter', backgroundColor: '#0f0', pointStyle: 'triangle', pointRadius: 8, showLine: false }
-          ]
-        }, options: { animation: false, scales: { x: { display: false } } }
+          { label: 'Price', data: [], borderColor: '#0ff', borderWidth: 2, pointRadius: 0 },
+          { label: 'Entries', data: [], type: 'scatter', backgroundColor: '#0f0', pointStyle: 'triangle', pointRadius: 8, showLine: false }
+        ] }, options: { animation: false, scales: { x: { display: false } } }
       });
 
       rsiChart = new Chart(rsiCtx, {
         type: 'line', data: { labels: [], datasets: [
-            { label: 'RSI', data: [], borderColor: '#ff0', borderWidth: 2, pointRadius: 0 }
-          ]
-        }, options: { animation: false, scales: { x: { display: false }, y: { min: 0, max: 100 } } }
+          { label: 'RSI', data: [], borderColor: '#ff0', borderWidth: 2, pointRadius: 0 }
+        ] }, options: { animation: false, scales: { x: { display: false }, y: { min: 0, max: 100 } } }
       });
     }
 
@@ -133,30 +147,29 @@
       ws = new WebSocket(WS_URL);
       ws.onopen = () => {
         ws.send(JSON.stringify({ authorize: TOKEN }));
-        ws.send(JSON.stringify({ balance: 1 }));
-        subscribeTicks();
+        subscribe();
+        ws.send(JSON.stringify({ balance: 1, subscribe: 1 }));
       };
       ws.onmessage = ({ data }) => {
         const msg = JSON.parse(data);
-        if (msg.error) console.error(msg.error);
-        if (msg.authorize) {
-          document.getElementById('realBalance').innerText = Number(msg.authorize.balance).toFixed(2);
-          document.getElementById('crNumber').innerText  = msg.authorize.loginid;
-        }
-        if (msg.balance) {
-          document.getElementById('realBalance').innerText = Number(msg.balance.balance).toFixed(2);
-        }
+        if (msg.balance) updateBalance(msg.balance);
         if (msg.tick) updateData(msg.tick);
+        if (msg.proposal) ws.send(JSON.stringify({ buy: msg.proposal.id }));
+        if (msg.buy) handlePurchase(msg.buy);
       };
     }
 
-    function subscribeTicks() {
+    function subscribe() {
       ws.send(JSON.stringify({ ticks: marketSelect.value }));
+    }
+
+    function updateBalance(bal) {
+      document.getElementById('balance').innerText = parseFloat(bal.balance).toFixed(2);
     }
 
     function updateData(tick) {
       const price = tick.quote;
-      const time = new Date(tick.epoch * 1000).toLocaleTimeString();
+      const time  = new Date(tick.epoch * 1000).toLocaleTimeString();
       priceData.push(price); timeLabels.push(time);
       if (priceData.length > 100) { priceData.shift(); timeLabels.shift(); rsiData.shift(); entryMarkers.shift(); }
       const rsi = calculateRSI(priceData);
@@ -169,60 +182,81 @@
       if (data.length < period + 1) return 50;
       let gains = 0, losses = 0;
       for (let i = data.length - period; i < data.length; i++) {
-        const diff = data[i] - data[i-1]; if (diff>0) gains+=diff; else losses+=Math.abs(diff);
+        const diff = data[i] - data[i - 1];
+        if (diff > 0) gains += diff; else losses -= diff;
       }
-      const rs = gains / (losses||1);
-      return 100 - 100/(1+rs);
+      const rs = gains / (losses || 1);
+      return 100 - 100 / (1 + rs);
     }
 
     function updateCharts(price, time, rsi) {
-      priceChart.data.labels = timeLabels; priceChart.data.datasets[0].data = priceData; priceChart.data.datasets[1].data = entryMarkers; priceChart.update();
-      rsiChart.data.labels = timeLabels; rsiChart.data.datasets[0].data = rsiData; rsiChart.update();
+      priceChart.data.labels = timeLabels;
+      priceChart.data.datasets[0].data = priceData;
+      priceChart.data.datasets[1].data = entryMarkers;
+      priceChart.update();
+      rsiChart.data.labels = timeLabels;
+      rsiChart.data.datasets[0].data = rsiData;
+      rsiChart.update();
     }
 
     function autoAnalyze(price, rsi) {
       if (priceData.length < 20) return;
-      const recent = priceData.slice(-5); const avg = recent.reduce((a,b)=>a+b)/5;
-      let signal=null, conf=0, dur=5;
-      if (rsi<30 && price<avg) { signal='Buy'; conf=5; dur=3; }
-      else if (rsi<40 && price<avg) { signal='Buy'; conf=4; dur=2; }
-      else if (rsi<50 && price<avg) { signal='Buy'; conf=2; dur=1; }
-      else if (rsi>70 && price>avg) { signal='Sell'; conf=5; dur=3; }
-      else if (rsi>60 && price>avg) { signal='Sell'; conf=4; dur=2; }
-      else if (rsi>55 && price>avg) { signal='Sell'; conf=2; dur=1; }
-      if (signal) publishSignal(signal, conf, price, signal==='Buy'?price-0.3:price+0.3, dur);
+      const recent = priceData.slice(-5);
+      const avg = recent.reduce((a, b) => a + b) / recent.length;
+      let signal = null, conf = 0, duration = 1;
+      if (rsi < 30 && price < avg) { signal = 'CALL'; conf = 5; duration = 1; }
+      else if (rsi > 70 && price > avg) { signal = 'PUT'; conf = 5; duration = 1; }
+      if (signal) publishSignal(signal, conf, price, duration);
     }
 
-    function publishSignal(signal, conf, entry, sl, dur) {
-      document.getElementById('signal').innerHTML =
-        `<span style="color:${signal==='Buy'?'#0f0':'#f00'}">${signal} (${conf} Conf)</span>`;
+    function publishSignal(signal, conf, entry, duration) {
+      const now = new Date().toLocaleTimeString();
+      document.getElementById('signal').innerHTML = `<span style="color:${signal==='CALL'? '#0f0':'#f00'}">${signal} (${conf} Conf)</span>`;
       document.getElementById('signalStrength').innerText = `${conf} Conformation`;
       document.getElementById('alertSound').play();
-      entryMarkers.push({ x: timeLabels.slice(-1)[0], y: entry });
+      entryMarkers.push({ x: now, y: entry });
     }
 
-    // Trade execution from real balance
-    function executeTrade(type) {
+    function handlePurchase(trade) {
       const now = new Date().toLocaleTimeString();
-      const market = marketSelect.value;
-      const entry = priceData.slice(-1)[0] || 0;
-      const sl    = entry;
-      const dur   = '-';
-      const row = `
-        <tr>
-          <td>${now}</td><td>${market}</td><td>${type}</td>
-          <td>${entry.toFixed(2)}</td><td>${sl.toFixed(2)}</td><td>${dur}</td>
-          <td>Opened</td>
-        </tr>`;
-      document.getElementById('tradeHistoryBody').innerHTML = row + document.getElementById('tradeHistoryBody').innerHTML;
+      const row = `<tr>
+        <td>${now}</td>
+        <td>${trade.symbol}</td>
+        <td>${trade.contract_type}</td>
+        <td>${trade.amount.toFixed(2)}</td>
+        <td>${trade.duration}t</td>
+        <td>${trade.is_sold? (trade.profit>0?'Win':'Loss') : 'Open'}</td>
+      </tr>`;
+      document.getElementById('tradeHistory').innerHTML = row + document.getElementById('tradeHistory').innerHTML;
+      document.getElementById('cancelBtn').disabled = true;
     }
 
-    document.getElementById('riseBtn').onclick   = () => executeTrade('Rise');
-    document.getElementById('fallBtn').onclick   = () => executeTrade('Fall');
-    document.getElementById('cancelBtn').onclick = () => alert('Trade cancelled.');
+    function executeTrade(type) {
+      ws.send(JSON.stringify({
+        proposal: 1,
+        amount: 1,
+        basis: 'stake',
+        contract_type: type,
+        currency: 'USD',
+        duration: 1,
+        duration_unit: 't',
+        symbol: marketSelect.value
+      }));
+      document.getElementById('cancelBtn').disabled = false;
+    }
 
-    document.getElementById('startBtn').onclick = () => { initCharts(); connect(); document.getElementById('startBtn').disabled=true; document.getElementById('stopBtn').disabled=false; };
-    document.getElementById('stopBtn').onclick  = () => { if(ws) ws.close(); document.getElementById('startBtn').disabled=false; document.getElementById('stopBtn').disabled=true; };
+    function cancelTrade() {
+      if (!currentProposalId) return;
+      ws.send(JSON.stringify({ forget: currentProposalId }));
+      document.getElementById('cancelBtn').disabled = true;
+    }
+
+    document.getElementById('riseBtn').onclick = () => executeTrade('CALL');
+    document.getElementById('fallBtn').onclick = () => executeTrade('PUT');
+    document.getElementById('cancelBtn').onclick = cancelTrade;
+
+    document.getElementById('startBtn').onclick = () => { initCharts(); connect(); document.getElementById('startBtn').disabled = true; document.getElementById('stopBtn').disabled = false; };
+    document.getElementById('stopBtn').onclick = () => { if (ws) ws.close(); document.getElementById('startBtn').disabled = false; document.getElementById('stopBtn').disabled = true; };
   </script>
 </body>
 </html>
