--- a/index.html
+++ b/index.html
@@ -2,92 +2,215 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Deriv Secure Login</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Binary Profit Table</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
   <style>
-    body {
+    :root {
+      --sidebar-bg:     #000000;
+      --main-bg:        #000000;
+      --header-bg:      #000000;
+      --text-primary:   #ffffff;
+      --text-secondary: #cccccc;
+      --accent-positive:#00d0b2;
+      --accent-negative:#f44336;
+      --badge-bg:       #5b8a92;
+      --badge-text:     #ffffff;
+      --filter-border:  transparent;
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #0b0b2b, #1e0033);
-      color: #fff;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Segoe UI Rounded', 'Segoe UI', sans-serif;
+      background: var(--main-bg);
+      color: var(--text-primary);
+      font-size: 14px;
+    }
+
+    .container {
       display: flex;
-      justify-content: center;
-      align-items: center;
       height: 100vh;
-      overflow: hidden;
+      flex-direction: column;
     }
 
-    .login-wrapper {
-      background: #140030;
-      padding: 50px 40px;
-      border-radius: 16px;
-      box-shadow: 0 0 30px #0ff2ff55;
-      text-align: center;
-      max-width: 400px;
-      width: 90%;
-      animation: glowPulse 2s infinite ease-in-out;
+    main.main {
+      flex: 1;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
     }
 
-    @keyframes glowPulse {
-      0% { box-shadow: 0 0 10px #0ff2ff33; }
-      50% { box-shadow: 0 0 25px #0ff2ffcc; }
-      100% { box-shadow: 0 0 10px #0ff2ff33; }
+    .table-container {
+      flex: 1;
+      overflow-y: auto;
+      overflow-x: hidden;
+      scrollbar-width: none;
+      background-color: #000;
+    }
+    .table-container::-webkit-scrollbar {
+      display: none;
     }
 
-    .login-wrapper h2 {
-      margin-bottom: 25px;
-      font-size: 26px;
-      color: #7df9ff;
-      letter-spacing: 1px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      min-width: 900px;
     }
 
-    .login-btn {
-      background: linear-gradient(90deg, #00ccff, #6f00ff);
-      color: #fff;
-      padding: 14px 32px;
-      font-size: 17px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-      box-shadow: 0 0 12px #00ccff;
-    }
-
-    .login-btn:hover {
-      transform: scale(1.08);
-      box-shadow: 0 0 18px #6f00ff;
-    }
-
-    .footer-note {
-      margin-top: 25px;
+    thead th {
+      position: sticky;
+      top: 0;
+      background: var(--header-bg);
+      padding: 12px;
+      color: var(--text-primary);
+      text-align: left;
       font-size: 13px;
-      color: #8888aa;
+      font-weight: 500;
+    }
+
+    tbody td {
+      padding: 12px;
+      color: var(--text-secondary);
+      font-size: 13px;
+    }
+    tbody tr:hover td {
+      background: #111;
+    }
+
+    .badge.currency {
+      background: var(--badge-bg);
+      color: var(--badge-text);
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-size: 11px;
+    }
+
+    .time {
+      display: block;
+      color: var(--text-secondary);
+      font-size: 11px;
+      margin-top: 2px;
+    }
+
+    td.positive {
+      color: var(--accent-positive);
+      font-weight: 600;
+    }
+    td.negative {
+      color: var(--accent-negative);
+      font-weight: 600;
+    }
+
+    tbody td:nth-child(2),
+    tbody td:nth-child(4),
+    tbody td:nth-child(5),
+    tbody td:nth-child(6),
+    tbody td:nth-child(7) {
+      color: #eee;
+      font-size: 14px;
+      font-family: 'Segoe UI Rounded', sans-serif;
+      font-weight: 500;
+      opacity: 0.7;
+    }
+
+    td:nth-child(8) {
+      color: var(--accent-positive);
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    /* SUMMARY STYLING */
+    .summary {
+      margin-top: 10px;
+      display: flex;
+      font-size: 13px;
+      font-weight: 600;
+      color: var(--text-secondary);
+      padding: 10px 0 0;
+      border-top: 1px solid #222;
+    }
+    .summary span:first-child {
+      flex: 7;
+    }
+    /* Move the total-profit value 11cm to the left */
+    .summary .total-profit {
+      flex: 1;
+      color: var(--accent-positive);
+      font-size: 14px;
+      text-align: left;
+      margin-left: -11cm;
     }
   </style>
 </head>
 <body>
-  <div class="login-wrapper">
-    <h2>Smart Analyzer Login</h2>
-    <button class="login-btn" id="loginBtn">Connect with Deriv</button>
-    <div class="footer-note"> Login Powered by Deriv</div>
+  <div class="container">
+    <main class="main">
+      <div class="table-container">
+        <table>
+          <thead>
+            <tr>
+              <th>Type</th>
+              <th>Ref. ID</th>
+              <th>Currency</th>
+              <th>Buy time</th>
+              <th>Stake</th>
+              <th>Sell time</th>
+              <th>Contract value</th>
+              <th>Total profit/loss</th>
+            </tr>
+          </thead>
+          <tbody id="trade-body"></tbody>
+        </table>
+      </div>
+      <div class="summary">
+        <span>Profit/loss on the last 150 contracts</span>
+        <span class="total-profit" id="total-profit">+23,649.98</span>
+      </div>
+    </main>
   </div>
 
   <script>
-    const APP_ID = '82274';
-    const REDIRECT_URL = window.location.origin + window.location.pathname;
+    // If you want a static summary, you can remove or comment out the script below
+    const tbody = document.getElementById('trade-body');
+    const totalProfitEl = document.getElementById('total-profit');
+    let totalProfit = 0;
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const token = urlParams.get("token1");
+    for (let i = 0; i < 150; i++) {
+      const id = 138079013361 + i;
+      const stake = ((i % 10) + 1) * 0.5;
+      const profit = parseFloat((stake * 0.4).toFixed(2));
+      const buySec = (58 + i) % 60;
+      const sellSec = (2 + i) % 60;
+      const value = (stake * 1.38).toFixed(2);
+      totalProfit += profit;
 
-    if (token) {
-      localStorage.setItem("deriv_token", token);
-      window.location.href = "dashboard.html";
+      const row = `
+        <tr>
+          <td><i class="fas fa-chart-line"></i></td>
+          <td>${id}</td>
+          <td><span class="badge currency">USD</span></td>
+          <td>04 Jul 2025<br><span class="time">17:23:${String(buySec).padStart(2,'0')} GMT</span></td>
+          <td>${stake.toFixed(2)}</td>
+          <td>04 Jul 2025<br><span class="time">17:24:${String(sellSec).padStart(2,'0')} GMT</span></td>
+          <td>${value}</td>
+          <td class="positive">+${profit.toFixed(2)}</td>
+        </tr>
+      `;
+      tbody.insertAdjacentHTML('beforeend', row);
     }
 
-    document.getElementById("loginBtn").addEventListener("click", () => {
-      const loginUrl = `https://oauth.deriv.com/oauth2/authorize?app_id=${APP_ID}&l=EN&redirect_uri=${encodeURIComponent(REDIRECT_URL)}`;
-      window.location.href = loginUrl;
-    });
+    // Uncomment below if you want script-calculated total
+    // totalProfitEl.textContent = '+' + totalProfit.toFixed(2);
   </script>
 </body>
 </html>
