--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Binary Profit Table</title>
+
+  <!-- load Font Awesome as before -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
+
+  <!-- load Inter from rsms.me -->
+  <link rel="preconnect" href="https://rsms.me/"> <!-- :contentReference[oaicite:0]{index=0} -->
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css"> <!-- :contentReference[oaicite:1]{index=1} -->
+
   <style>
     :root {
+      /* your color variables */
       --sidebar-bg:     #000000;
       --main-bg:        #000000;
       --header-bg:      #000000;
@@ -31,7 +39,9 @@
     }
 
     body {
-      font-family: 'Segoe UI Rounded', 'Segoe UI', sans-serif;
+      /* switch to Inter and enable tabular figures */
+      font-family: Inter, sans-serif;
+      font-feature-settings: 'tnum';
       background: var(--main-bg);
       color: var(--text-primary);
       font-size: 14px;
@@ -111,6 +121,7 @@
       font-weight: 600;
     }
 
+    /* use Inter here too */
     tbody td:nth-child(2),
     tbody td:nth-child(4),
     tbody td:nth-child(5),
@@ -118,7 +129,7 @@
     tbody td:nth-child(7) {
       color: #eee;
       font-size: 14px;
-      font-family: 'Segoe UI Rounded', sans-serif;
+      font-family: Inter, sans-serif;
       font-weight: 500;
       opacity: 0.7;
     }
@@ -180,7 +191,6 @@
   </div>
 
   <script>
-    // If you want a static summary, you can remove or comment out the script below
     const tbody = document.getElementById('trade-body');
     const totalProfitEl = document.getElementById('total-profit');
     let totalProfit = 0;
@@ -209,7 +219,6 @@
       tbody.insertAdjacentHTML('beforeend', row);
     }
 
-    // Uncomment below if you want script-calculated total
     // totalProfitEl.textContent = '+' + totalProfit.toFixed(2);
   </script>
 </body>
