--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -20,7 +20,6 @@
       --accent-negative:#f44336;
       --badge-bg:       #5b8a92;
       --badge-text:     #ffffff;
-      --filter-border:  transparent;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
@@ -124,7 +123,6 @@
       color: var(--accent-positive);
       font-size: 14px;
       text-align: left;
-      /* shifted 7cm to the left */
       margin-left: -7cm;
     }
   </style>
@@ -159,19 +157,15 @@
   <script>
     const tbody         = document.getElementById('trade-body');
     const totalProfitEl = document.getElementById('total-profit');
-
-    // Persistent storage keys
     const STORAGE_TRADES = 'persistedTrades';
     const STORAGE_PROFIT = 'persistedTotalProfit';
 
-    // Load persisted trades and profit
+    // Load persisted data
     let trades = JSON.parse(localStorage.getItem(STORAGE_TRADES)) || [];
     let totalProfit = parseFloat(localStorage.getItem(STORAGE_PROFIT));
-    if (isNaN(totalProfit)) {
-      totalProfit = 3629.99; // default starting amount
-    }
-    
-    // Formatters
+    if (isNaN(totalProfit)) { totalProfit = 3629.99; }
+
+    // Date/time formatters
     const fmtDate = d => d.toLocaleDateString('en-GB', {
       day: '2-digit', month: 'short', year: 'numeric'
     });
@@ -179,17 +173,27 @@
       hour12: false, hour: '2-digit', minute: '2-digit', second: '2-digit'
     });
 
+    // Ensure refId is 12-digit numeric starting with 138411
+    function formatRefId(raw) {
+      let digits = String(raw).replace(/\D/g, '');
+      // Take last up to 6 digits or pad with zeros
+      let tail = digits.padStart(6, '0').slice(-6);
+      return '138411' + tail;
+    }
+
+    // Render existing trades
     function renderSavedTrades() {
       trades.slice().reverse().forEach(data => {
         const buyDate  = new Date(data.buyTime);
         const sellDate = new Date(data.sellTime);
         const cls      = data.profit >= 0 ? 'positive' : 'negative';
         const sign     = data.profit >= 0 ? '+' : '';
-        const row = 
+        const refId    = formatRefId(data.refId);
+        const row =
           `<tr>
             <td><i class="fas fa-chart-line"></i></td>
-            <td>${data.refId}</td>
-            <td><span class="badge currency">${data.currency}</span></td>
+            <td>${refId}</td>
+            <td><span class="badge currency">USD</span></td>
             <td>${fmtDate(buyDate)}<br><span class="time">${fmtTime(buyDate)} GMT</span></td>
             <td>${data.stake.toFixed(2)}</td>
             <td>${fmtDate(sellDate)}<br><span class="time">${fmtTime(sellDate)} GMT</span></td>
@@ -200,23 +204,27 @@
       });
     }
 
+    // Update summary display
     function updateTotalProfitDisplay() {
-      totalProfitEl.textContent = (totalProfit >= 0 ? '+' : '') + totalProfit.toLocaleString('en-GB', {
-        minimumFractionDigits: 2,
-        maximumFractionDigits: 2
-      });
+      totalProfitEl.textContent = (totalProfit >= 0 ? '+' : '') +
+        totalProfit.toLocaleString('en-GB', {
+          minimumFractionDigits: 2,
+          maximumFractionDigits: 2
+        });
     }
 
+    // Add a new trade row and update storage
     function addTrade(data) {
       const buyDate  = new Date(data.buyTime);
       const sellDate = new Date(data.sellTime);
       const cls      = data.profit >= 0 ? 'positive' : 'negative';
       const sign     = data.profit >= 0 ? '+' : '';
-      const row = 
+      const refId    = formatRefId(data.refId);
+      const row =
         `<tr>
           <td><i class="fas fa-chart-line"></i></td>
-          <td>${data.refId}</td>
-          <td><span class="badge currency">${data.currency}</span></td>
+          <td>${refId}</td>
+          <td><span class="badge currency">USD</span></td>
           <td>${fmtDate(buyDate)}<br><span class="time">${fmtTime(buyDate)} GMT</span></td>
           <td>${data.stake.toFixed(2)}</td>
           <td>${fmtDate(sellDate)}<br><span class="time">${fmtTime(sellDate)} GMT</span></td>
@@ -225,21 +233,19 @@
         </tr>`;
       tbody.insertAdjacentHTML('afterbegin', row);
 
-      // Update profit and persist
       totalProfit += data.profit;
       localStorage.setItem(STORAGE_PROFIT, totalProfit);
       updateTotalProfitDisplay();
 
-      // Persist trade
       trades.unshift(data);
       localStorage.setItem(STORAGE_TRADES, JSON.stringify(trades));
     }
 
-    // Initialize display
+    // Initial render
     renderSavedTrades();
     updateTotalProfitDisplay();
 
-    // Listen for new trades
+    // Listen for new trades via BroadcastChannel
     const profitChannel = new BroadcastChannel('trade-profits');
     profitChannel.onmessage = ({ data }) => addTrade(data);
   </script>
